--- a/unknown_0blsy8.t3_clean.json
+++ b/unknown_0blsy8.t3_clean.json
@@ -6,22 +6,22 @@
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 1571604392700,
+	"last_scraped": 1571608106798,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
 		}
 	],
-	"updt": 1571600446756,
-	"edit": 9,
-	"next_scrape": 1571644031864,
+	"updt": 1571604732094,
+	"edit": 10,
+	"next_scrape": 1571652926878,
 	"category": "clicker",
-	"last_update": 1571604392700,
+	"last_update": 1571608106798,
 	"output": [
 		{
 			"args": {},
-			"calls": 58736,
+			"calls": 70934,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"other",
@@ -53,7 +53,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 65327,
+			"calls": 72213,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"other",
@@ -156,6 +156,11 @@
 				"lity.\\n2",
 				"s next?\\n"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
