--- a/uknown_xf2dal.loc.json
+++ b/uknown_xf2dal.loc.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_xf2dal.loc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xf2dal.loc",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571606688698,
+	"last_scraped": 1571610672922,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"next_scrape": 1571649739164,
+	"next_scrape": 1571655380227,
 	"category": "plant_sim",
-	"last_update": 1571606688698,
+	"last_update": 1571610672922,
 	"output": [
 		{
 			"args": {},
-			"calls": 15643,
+			"calls": 16725,
 			"base": "c:\"4ktela\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"s wel",
@@ -60,8 +60,8 @@
 			]
 		}
 	],
-	"updt": 1571602927112,
-	"edit": 19,
+	"updt": 1571606761768,
+	"edit": 20,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
