--- a/uknown_7w7mc1.moon.json
+++ b/uknown_7w7mc1.moon.json
@@ -6,16 +6,16 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524197262,
-	"last_scraped": 1571613052088,
+	"last_scraped": 1571616750701,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524197262
 		}
 	],
-	"next_scrape": 1571657505657,
+	"next_scrape": 1571663271100,
 	"category": "plant_sim",
-	"last_update": 1571613052088,
+	"last_update": 1571616750701,
 	"output": [
 		{
 			"args": {},
@@ -51,10 +51,25 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 1749,
+			"base": "c:\"o7t96o\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
+			"fragments": [
+				"_SECT",
+				"OR | ",
+				"| PROG",
+				"E ERRO",
+				"NETW ER",
+				"MFT0X1F_",
+				" | NETW ",
+				"91C\\nSYST"
+			]
 		}
 	],
-	"updt": 1571609471400,
-	"edit": 15,
+	"updt": 1571613078636,
+	"edit": 16,
 	"identified": [
 		{
 			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
