--- a/unknown_fc9arx.scour.json
+++ b/unknown_fc9arx.scour.json
@@ -6,18 +6,18 @@
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 1571614086320,
+	"last_scraped": 1571617564771,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
 		}
 	],
-	"updt": 1571610371399,
-	"edit": 20,
-	"next_scrape": 1571659135155,
+	"updt": 1571614204499,
+	"edit": 21,
+	"next_scrape": 1571657708216,
 	"category": "plant_sim",
-	"last_update": 1571614086320,
+	"last_update": 1571617564771,
 	"output": [
 		{
 			"args": {},
@@ -49,6 +49,22 @@
 						"e season"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 878,
+			"base": "c:\"v0wc4r\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"rly i",
+				"ll st",
+				"head ",
+				"e, Eri",
+				", Erin",
+				" call.",
+				"ly if y",
+				"stay lat",
+				"e season"
 			]
 		}
 	],
