--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571614579119,
+	"last_scraped": 1571618017449,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571611047123,
-	"edit": 23,
-	"next_scrape": 1571655053348,
+	"updt": 1571614878368,
+	"edit": 24,
+	"next_scrape": 1571658158863,
 	"category": "plant_sim",
-	"last_update": 1571614579119,
+	"last_update": 1571618017449,
 	"output": [
 		{
 			"args": {},
@@ -55,6 +55,22 @@
 						" and get"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 666,
+			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
+			"fragments": [
+				"dy to",
+				"assig",
+				" your",
+				"s and ",
+				"t ready",
+				"ll give",
+				"l gives",
+				" and ge",
+				" - this "
 			]
 		}
 	],
