--- a/uknown_vnbzxc.breach.json
+++ b/uknown_vnbzxc.breach.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_vnbzxc.breach",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_vnbzxc.breach",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571637791771,
+	"last_scraped": 1571641370593,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"next_scrape": 1571681755594,
+	"next_scrape": 1571685605543,
 	"category": "dice_roller",
-	"last_update": 1571637791771,
+	"last_update": 1571641370593,
 	"output": [
 		{
 			"args": {},
-			"calls": 193693,
+			"calls": 207681,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"r cre",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1571634722003,
-	"edit": 23
+	"updt": 1571637882830,
+	"edit": 24
 }
