--- a/uknown_i5argo.pounce.json
+++ b/uknown_i5argo.pounce.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_i5argo.pounce",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_i5argo.pounce",
 	"sector": "NGC_7345",
 	"sec_level": 4,
 	"date_added": 1571647934481,
-	"last_scraped": 1571648397109,
+	"last_scraped": 1571649151233,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571647934481
 		}
 	],
-	"scrape_ct": 14,
-	"next_scrape": 1571648457109,
+	"next_scrape": 1571692430285,
 	"category": "coin_flipper",
-	"last_update": 1571648397109,
+	"last_update": 1571649151233,
 	"output": [
 		{
 			"args": {},
-			"calls": 43698,
+			"calls": 115363,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" lane",
@@ -66,5 +65,7 @@
 				"k?\\n20A6 "
 			]
 		}
-	]
+	],
+	"updt": 1571648703366,
+	"edit": 2
 }
