--- a/uknown_56z58x.css.json
+++ b/uknown_56z58x.css.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_56z58x.css",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_56z58x.css",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531077580,
-	"last_scraped": 1571649331819,
+	"last_scraped": 1571652687019,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531077580
 		}
 	],
-	"updt": 1571645998938,
-	"edit": 29,
-	"next_scrape": 1571693992153,
+	"updt": 1571649379347,
+	"edit": 30,
+	"next_scrape": 1571698157908,
 	"category": "plant_sim",
-	"last_update": 1571649331819,
+	"last_update": 1571652687019,
 	"output": [
 		{
 			"args": {},
-			"calls": 24902,
+			"calls": 26465,
 			"base": "c:\"ip9w6z\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"n - I",
