--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571653109577,
+	"last_scraped": 1571656446383,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571649831276,
-	"edit": 34,
-	"next_scrape": 1571693022920,
+	"updt": 1571653217482,
+	"edit": 35,
+	"next_scrape": 1571700136811,
 	"category": "plant_sim",
-	"last_update": 1571653109577,
+	"last_update": 1571656446383,
 	"output": [
 		{
 			"args": {},
@@ -59,17 +59,28 @@
 		},
 		{
 			"args": {},
-			"calls": 9459,
+			"calls": 9991,
 			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
-				"dy to",
 				"assig",
-				" your",
-				"s and ",
+				" with",
+				"ull gi",
+				"ssigne",
+				"rps an",
+				"our as",
+				"nd get",
+				"igned ",
+				"h your",
+				"e - th",
+				"ady to",
+				"ur assi",
 				"t ready",
 				"ll give",
 				"l gives",
-				" and ge",
+				"this lul",
+				"s and ge",
+				" ready t",
+				" get rea",
 				" - this "
 			]
 		}
