--- a/uknown_i5argo.pounce.json
+++ b/uknown_i5argo.pounce.json
@@ -6,31 +6,37 @@
 	"sector": "NGC_7345",
 	"sec_level": 4,
 	"date_added": 1571647934481,
-	"last_scraped": 1571656004199,
+	"last_scraped": 1571659259445,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571647934481
 		}
 	],
-	"next_scrape": 1571698809448,
+	"next_scrape": 1571701592750,
 	"category": "coin_flipper",
-	"last_update": 1571656004199,
+	"last_update": 1571659259445,
 	"output": [
 		{
 			"args": {},
-			"calls": 131053,
+			"calls": 137147,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				" lane",
+				"re do",
 				"our si",
 				"f a la",
+				"ck.\\n2",
 				"20A7 A",
 				" your ",
 				"r side ",
 				"do I pl",
+				"ace the",
 				"20A5 Wh",
-				"k?\\n20A6 "
+				" do I p",
+				" a lane,",
+				"tack?\\n20",
+				"k?\\n20A6 ",
+				"ane,\\n20A"
 			],
 			"hits": [
 				{
@@ -66,6 +72,6 @@
 			]
 		}
 	],
-	"updt": 1571652538413,
-	"edit": 4
+	"updt": 1571656150815,
+	"edit": 5
 }
