--- a/abndnd_nowjtq.fs.json
+++ b/abndnd_nowjtq.fs.json
@@ -1,26 +1,26 @@
 {
 	"_id": "abndnd_nowjtq.fs",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "abndnd_nowjtq.fs",
 	"sector": "HJG_3717",
 	"sec_level": 4,
 	"date_added": 1571662696580,
-	"last_scraped": 1571662908680,
+	"last_scraped": 1571663079379,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571662696580
 		}
 	],
-	"scrape_ct": 17,
-	"next_scrape": 1571662968680,
+	"scrape_ct": 14,
+	"next_scrape": 1571663139379,
 	"category": "plant_sim",
-	"last_update": 1571662908680,
+	"last_update": 1571663079379,
 	"output": [
 		{
 			"args": {},
-			"calls": 2199,
+			"calls": 3537,
 			"base": "c:\"sfayrf\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"| BOD",
@@ -84,5 +84,7 @@
 				" the thi"
 			]
 		}
-	]
+	],
+	"updt": 1571662919685,
+	"edit": 1
 }
