--- a/abndnd_nowjtq.hk_auction_house.json
+++ b/abndnd_nowjtq.hk_auction_house.json
@@ -1,7 +1,7 @@
 {
 	"_id": "abndnd_nowjtq.hk_auction_house",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "abndnd_nowjtq.hk_auction_house",
 	"sector": "SPC_2500",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1563098745814
+		},
+		{
+			"type": "died",
+			"when": 1571664755560
 		}
 	],
-	"updt": 1570740783855,
-	"edit": 138,
+	"updt": 1570751378478,
+	"edit": 139,
 	"next_scrape": 1570791849337,
 	"category": "dice_roller",
 	"last_update": 1570751238233,
