--- a/uknown_i5argo.pounce.json
+++ b/uknown_i5argo.pounce.json
@@ -1,42 +1,49 @@
 {
 	"_id": "uknown_i5argo.pounce",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_i5argo.pounce",
 	"sector": "NGC_7345",
 	"sec_level": 4,
 	"date_added": 1571647934481,
-	"last_scraped": 1571662936577,
+	"last_scraped": 1571666324553,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571647934481
 		}
 	],
-	"next_scrape": 1571707141952,
+	"next_scrape": 1571706479836,
 	"category": "coin_flipper",
-	"last_update": 1571662936577,
+	"last_update": 1571666324553,
 	"output": [
 		{
 			"args": {},
-			"calls": 150327,
+			"calls": 158446,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"re do",
 				"our si",
-				"f a la",
-				"ck.\\n2",
 				"20A7 A",
 				" your ",
+				" place",
 				"r side ",
 				"do I pl",
-				"ace the",
-				"20A5 Wh",
-				" do I p",
+				"de of a",
+				"ck.\\n20",
+				"Where d",
+				"0A5 Whe",
+				"o I plac",
+				"lace the",
+				"ere do I",
+				"e stack?",
+				"e do I p",
+				" of a la",
 				" a lane,",
 				"tack?\\n20",
 				"k?\\n20A6 ",
-				"ane,\\n20A"
+				"k.\\n20A5 ",
+				"ane,\\n20A",
+				"\\n20A5 Wh"
 			],
 			"hits": [
 				{
@@ -72,6 +79,6 @@
 			]
 		}
 	],
-	"updt": 1571659535858,
-	"edit": 6
+	"updt": 1571666299041,
+	"edit": 8
 }
