--- a/abndnd_nowjtq.hk_auction_house.json
+++ b/abndnd_nowjtq.hk_auction_house.json
@@ -17,8 +17,8 @@
 			"when": 1571664755560
 		}
 	],
-	"updt": 1570751378478,
-	"edit": 139,
+	"updt": 1571664947272,
+	"edit": 140,
 	"next_scrape": 1570791849337,
 	"category": "dice_roller",
 	"last_update": 1570751238233,
@@ -50,13 +50,18 @@
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						"s the",
-						"f it ",
-						"2154 ",
+						"xt ^2.",
 						"e only",
+						"card i",
+						"53 to ",
 						" in a ",
 						"t is th",
 						"5 card ",
+						"y\\n2155 ",
+						"\\n2156 i",
+						"If it is",
 						"3 to the",
+						"2154 If ",
 						" to the ",
 						" only\\n2",
 						"\\n2153 to"
@@ -70,13 +75,18 @@
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
 				"s the",
-				"f it ",
-				"2154 ",
+				"xt ^2.",
 				"e only",
+				"card i",
+				"53 to ",
 				" in a ",
 				"t is th",
 				"5 card ",
+				"y\\n2155 ",
+				"\\n2156 i",
+				"If it is",
 				"3 to the",
+				"2154 If ",
 				" to the ",
 				" only\\n2",
 				"\\n2153 to"
