--- a/unknown_rfxdd7.transfer.json
+++ b/unknown_rfxdd7.transfer.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_rfxdd7.transfer",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_rfxdd7.transfer",
 	"sector": "HJG_3717",
 	"sec_level": 4,
 	"date_added": 1571668945332,
-	"last_scraped": 1571669196108,
+	"last_scraped": 1571670009725,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571668945332
 		}
 	],
-	"scrape_ct": 16,
-	"next_scrape": 1571669256108,
+	"next_scrape": 1571713738066,
 	"category": "plant_sim",
-	"last_update": 1571669196108,
+	"last_update": 1571670009725,
 	"output": [
 		{
 			"args": {},
-			"calls": 2893,
+			"calls": 12705,
 			"base": "c:\"x9whs9\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"k you",
@@ -67,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1571669003426,
-	"edit": 1
+	"updt": 1571669906440,
+	"edit": 5
 }
