--- a/unknown_43cjrs.db.json
+++ b/unknown_43cjrs.db.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_43cjrs.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_43cjrs.db",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 1571666995374,
+	"last_scraped": 1571670725594,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
 		}
 	],
-	"updt": 1571664270749,
-	"edit": 37,
-	"next_scrape": 1571712308012,
+	"updt": 1571667426184,
+	"edit": 38,
+	"next_scrape": 1571714681606,
 	"category": "coin_flipper",
-	"last_update": 1571666995374,
+	"last_update": 1571670725594,
 	"output": [
 		{
 			"args": {},
-			"calls": 284921,
+			"calls": 292984,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"was i",
