--- a/uknown_i5argo.pounce.json
+++ b/uknown_i5argo.pounce.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_i5argo.pounce",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_i5argo.pounce",
 	"sector": "NGC_7345",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1571647934481
+		},
+		{
+			"type": "died",
+			"when": 1571676143512
 		}
 	],
 	"next_scrape": 1571706479836,
@@ -79,6 +83,6 @@
 			]
 		}
 	],
-	"updt": 1571666299041,
-	"edit": 8
+	"updt": 1571666524949,
+	"edit": 9
 }
