--- a/uknown_i5argo.spec_search.json
+++ b/uknown_i5argo.spec_search.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_i5argo.spec_search",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_i5argo.spec_search",
 	"sector": "NGC_9612",
 	"sec_level": 2,
@@ -35,10 +35,14 @@
 				"from": "NGC_9612",
 				"to": "K_0542"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571676112742
+		}
 	],
-	"updt": 1569114299467,
-	"edit": 11,
+	"updt": 1570663003136,
+	"edit": 12,
 	"scrape_ct": 18,
 	"next_scrape": 1569108846794,
 	"category": "UNKNOWN CATEGORY",
