--- a/uknown_i5argo.top.json
+++ b/uknown_i5argo.top.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_i5argo.top",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_i5argo.top",
 	"sector": "SPC_4267",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565386388303
+		},
+		{
+			"type": "died",
+			"when": 1571676123408
 		}
 	],
 	"scrape_ct": 14,
@@ -121,8 +125,8 @@
 			]
 		}
 	],
-	"updt": 1570670442967,
-	"edit": 17,
+	"updt": 1570688701502,
+	"edit": 18,
 	"identified": [
 		{
 			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
