--- a/unknown_wnx10s.backend_lzw.json
+++ b/unknown_wnx10s.backend_lzw.json
@@ -1,27 +1,22 @@
 {
 	"_id": "unknown_wnx10s.backend_lzw",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "unknown_wnx10s.backend_lzw",
 	"sector": "HJG_3717",
 	"sec_level": 4,
 	"date_added": 1571675276995,
-	"last_scraped": 1571675304536,
+	"last_scraped": 1571675326249,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571675276995
 		}
 	],
-	"retry_args": [
-		{
-			"do": "LOSE"
-		}
-	],
-	"scrape_ct": 19,
-	"next_scrape": 1571675364536,
+	"scrape_ct": 17,
+	"next_scrape": 1571675386249,
 	"category": "risk_factor",
-	"last_update": 1571675304536,
+	"last_update": 1571675326249,
 	"output": [
 		{
 			"args": {},
@@ -35,6 +30,157 @@
 				"ll_this_",
 				"e capaci"
 			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 155,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"ve gr",
+				"usly #",
+				"G seri",
+				"his exp",
+				"ll_this_",
+				"e capaci"
+			]
+		},
+		{
+			"args": {
+				"do": "LOSE"
+			},
+			"calls": 288,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"ULe",
+				"his e3",
+				"5G seri",
+				"3usly #",
+				"his exp7",
+				"G seri 6",
+				"3GG seri",
+				"3GCve gr",
+				"9e capaci",
+				"his expN 6",
+				"3Gll_this_",
+				"3Ge capaci",
+				"e capaciN 3",
+				"K730GC with",
+				"1K370Gve gr§ do",
+				"66his eth do:\"win",
+				"43GC with do:\"win",
+				"53GC with doe capaciO",
+				"\nORG seriCOULD `VLO§E",
+				"win\"\n\nOR\n\nYOU COU¨D `VL",
+				"n\"\n\nOR\n\nYOU C©ULD `VLOSE",
+				"n\"\n\nOR\n\nYOU Chis expLOSE",
+				"o:\"win\"\n\nOR\n\nYOU COULll_th",
+				"M643K394GC with do:\"win\"\n\nOR\n\nYOU ",
+				"34K769GC with do:\"win¡\n\n¤R\n\nYOU COULD",
+				"GC w¢th do:\"win\"\n\nOR©\nhis eOULD `VLOSE",
+				"51T437B6¨4M651K806GC with do:\"win\"\n\nOR",
+				"9GC with do:\"win\"\nll_this_ COULD `VLOSE",
+				"7GC with do:\"win\"\n\nOR\n\nYOU COULD his eE",
+				"560T54B364M734K315GC wiªh do:\"win\"\n\nORG",
+				"532GC wi©h do:\"win\"\n\nOR\n\nYOU©COULD usly",
+				"3ÃC with do:\"whis exp\n\nYOUÁCOULD `VLOSE",
+				"3K4ª7GC with do:\"win\"\n\nOR\n\nYOU G seri`V",
+				"3GC§with do:\"win\"\n\nOll_this_OULD `VLOSE",
+				"3GCll_this_:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"2GC with d¢:\"win\"\n\nORG seriC¤ULD `VLOSE",
+				"21GC with do:\"win\"\n\nOR\n\nYOU COULDÁ`VLOS",
+				"1ÃGC with do:\"win\"\n\nOR\n\nY©U COULhis eOS",
+				"1GC¢with do:\"win\"ll_this_U COULD `VLOSE",
+				"196Khis e with do:\"win\"\n\nOR\n\nYOU COULD ",
+				"189©648GC with do:\"wve grOR\n\nYOU COUÁD ",
+				"1560Q966T8¨usly #34K816GC ¡ith do:\"win\"",
+				"10GC with do:\"win\"\n\nOR\n\nYOve grLD¤`VLOS",
+				"10B196M465K916GC with do:\"win\"ª\nOR\n\nYOU",
+				"915GC with doÃhis expOR\n\nYOU COULD `VLOS",
+				"875GC with do:\"win\"\n\nOR\n\nYOU COhis eVLOS",
+				"7K86§C with do:\"wine capaciOU COU©D `VªO",
+				"77M76K555GC with do:\"win\"\n\nOR\n\nYOU COULv",
+				"76GC with§do:\"ll_this_\n\nYOU C©ULD `VL¢SE",
+				"762M284K13GC with do:\"win\"\n\ne capaciCOUL",
+				"73GC with do:\"Áin\"\n\nOR\n\nYOU¢ve gr `VLOSE",
+				"66GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"648GC with doll_this_OR\n\nY§U COULD `VLOS",
+				"63K438GC ¨ith do:\"win\"\n\nO©\n\nYOU COULD `V",
+				"5©GC w¢th dusly #\"\n\nOR\n\nYOU COULD `VLªSE",
+				"57GC with do:\"win\"\n\nORÁ\nYOU Chis expLOSE",
+				"53M69his eªC with do:\"win\"\n\nOR\n\nYOU COUL",
+				"533G¡ withÃdo:\"win\"\n\nOR\n\nYOUhis exp`VLOS",
+				"51¡GC with d¦:\"win\"\n\nve grOU COULD `VLOS",
+				"50GC with do:\"win\"\n\nOR\n\nYOU COll_this_SE",
+				"4K114GC with¦do:\"whis exp\n\nYOU COUªD `VL",
+				"44G serih do:\"win\"\n\nOR\n\n¢OU COUªD `VLOSE",
+				"43714Q842T532B290M142K208GC with do:\"win",
+				"4060Q867T140B703M930K8©0GC with do¡his e",
+				"3his expwith do:\"win\"\n\nOR\n\nYOU COU§D `VL",
+				"38GC with do:\"Ãin\"\n\nOR\n\nYOU COULD ªVLOSE",
+				"34GC with do:\"whis eOR\n\nYOU COULD `VLOSE",
+				"344GC with do¨\"wihis exp\nYOU C¡ULD `VLOS",
+				"33GChis e do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"31GC wiG seri\"win\"\n\nªR\n\nYOU COULD `VLOSE",
+				"30¨6774482Q60T772B713M49©Kll_this_th §o:",
+				"30GC with do:\"win\"\n\nOR¢\n¤OU COUll_this_E",
+				"1ÃGCG serido:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"1Á49GC with do:©win\"\n\nOR\n\nYÁU Cusly #VLO",
+				"1M802K490GC with§do:\"win\"\n\nOR\nll_this_LD",
+				"1Khis expith do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"1K614GC wiÁh do:\"win\"ve gr\nYOU COULD `VL",
+				"19GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"18Gve grh do:\"win\"\n\nOR\n\nYOU COULD `V¡OSE",
+				"18GC with do:\"win\"G seriYOU COULD `VLOSE",
+				"17M78ª362GC with do:\"win\"\n\nOR\nhis expULD",
+				"17K804GC wªth do:\"win\"\n\nOR\n\nYOU COULD `V",
+				"16GC his exp:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"16B232M286K48GC w¨th do:\"winhis expYOU C",
+				"14GC with do:G seri\nOR\n\nYOU COULD `VLOSE",
+				"13K744GC Ãith ¢o:\"win\"\nve grYOU CÃULD `V",
+				"13GC with do:\"win\"\n\nORll_this_ULD `VLOSE",
+				"139GC with do:\"win\"\n\nOR\n\nYOve grLD `VLOS",
+				"12GC ¦ith do:\"win\"\n\nOR\n\nYÃU C¡ULDG seriE",
+				"12GC with do:\"win\"\n\nOR\nve grCOULD `VªOSE",
+				"12GC with do:\"win\"\n\nOR\n\nYOUhis eÁ `VLOSE",
+				"11GC with do:\"win\"\n\nORÃ\nYOU his e `VLOSE",
+				"11GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"11GC with do:\"win\"\n\nOR\n\nYG seriLD `¡LOSE",
+				"10K364GC wi¦usly #win\"\n\nORÃ\nYOU COULD `V",
+				"10GC with do:\"win\"\n\nOR\n\nYOU ªOULD `ve gr",
+				"10GC with dhis exp¡\nÃR\n\nYOU COULD `VLOSE",
+				"ve gr86K656GC with do:\"win\"\n\nOR\n\nYOU COUL",
+				"e capaciith do:\"win\"\n\nOR\n\nYOU CO§LD `VLOS",
+				"G seriwith do:\"win\"\n\nOR\n\nY¡U COULD `ªLOSE",
+				"G seri749G§ with do:\"win\"\n\nOR\n\nYOU COULD ",
+				"ve grGC with do:\"win\"\n\n¨R\n\nYOU¢COULD `VLOS",
+				"his eC with ¦o:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"his eC with do:\"©in\"\n\nOR\n\nYOU COULD `VLOSE",
+				"his eC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"ll_this_63M283K466¦C with do:\"win\"\n\nOR\n\nYOU",
+				"his exp08GC with do:\"wiª\"\n\nOR\n\nYOU COULD `V",
+				"his eGC with do:\"win\"\n\nOR\n\nYOU COULD `VL¢SE",
+				"his e1GC with do:\"win\"\n§OR\nÁYOU COULD `VLOS",
+				"e capaciC with do:\"w¤n\"\n\nOR\n\nYOU COULD `VLOS",
+				"usly #63GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"ll_this_11B983M870K217GC with d©:\"win\"\n\nOR\n\nY",
+				"e capaci8GC with do:\"win\"\n\nOR\n\nYOU COULD `VLO",
+				"ll_this_8§8Q543T771B633M172K480GC with¢do:\"¦in",
+				"his e 2K71GC with do:\"win\"\n\nOR\n\nYOU COULD `VLO",
+				"G seri3K¦49GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"ve grN 36GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"ve grN 110GC with do:\"win\"\n\nOR\n\nYOU COULÃ ©VLOS",
+				"ll_this_3GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"usly #N 1K895GC with do:\"win\"\n\nOR\n\nYOU ¡OULD `VL"
+			]
+		}
+	],
+	"updt": 1571675316992,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "win"
 		}
 	]
 }
