--- a/unknown_9v29je.t3brute.json
+++ b/unknown_9v29je.t3brute.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_9v29je.t3brute",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_9v29je.t3brute",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531309105,
-	"last_scraped": 1571683793131,
+	"last_scraped": 1571687062081,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531309105
 		}
 	],
-	"updt": 1571680728068,
-	"edit": 41,
-	"next_scrape": 1571725615858,
+	"updt": 1571687038436,
+	"edit": 43,
+	"next_scrape": 1571729904288,
 	"category": "dice_roller",
-	"last_update": 1571683793131,
+	"last_update": 1571687062081,
 	"output": [
 		{
 			"args": {},
-			"calls": 324432,
+			"calls": 336151,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"20CC t",
