--- a/uknown_lecrl6.heart.json
+++ b/uknown_lecrl6.heart.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_lecrl6.heart",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_lecrl6.heart",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 1571685936532,
+	"last_scraped": 1571689306024,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
 		}
 	],
-	"updt": 1571682755067,
-	"edit": 38,
-	"next_scrape": 1571731197360,
+	"updt": 1571689299694,
+	"edit": 40,
+	"next_scrape": 1571734107307,
 	"category": "coin_flipper",
-	"last_update": 1571685936532,
+	"last_update": 1571689306024,
 	"output": [
 		{
 			"args": {},
-			"calls": 299366,
+			"calls": 309596,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"tenti",
