--- a/unknown_opfa3d.fuckthisshitimout.json
+++ b/unknown_opfa3d.fuckthisshitimout.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_opfa3d.fuckthisshitimout",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_opfa3d.fuckthisshitimout",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 1571689942842,
+	"last_scraped": 1571693778623,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
 		}
 	],
-	"next_scrape": 1571731161086,
+	"next_scrape": 1571735076500,
 	"category": "dice_roller",
-	"last_update": 1571689942842,
+	"last_update": 1571693778623,
 	"output": [
 		{
 			"args": {},
-			"calls": 315099,
+			"calls": 333015,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"almost",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1571686813571,
-	"edit": 41
+	"updt": 1571689976975,
+	"edit": 42
 }
