--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571690164360,
+	"last_scraped": 1571694027924,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571687038436,
-	"edit": 45,
-	"next_scrape": 1571735055150,
+	"updt": 1571690428323,
+	"edit": 46,
+	"next_scrape": 1571733942998,
 	"category": "plant_sim",
-	"last_update": 1571690164360,
+	"last_update": 1571694027924,
 	"output": [
 		{
 			"args": {},
@@ -59,26 +59,33 @@
 		},
 		{
 			"args": {},
-			"calls": 18229,
+			"calls": 19201,
 			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
+				"ve - ",
+				"corps",
 				"assig",
-				" with",
 				"ull gi",
 				"ssigne",
 				"rps an",
 				"our as",
-				"nd get",
-				"igned ",
 				"h your",
 				"e - th",
+				"d corp",
 				"ady to",
+				" to mo",
 				"ur assi",
-				"t ready",
+				"ps and ",
 				"ll give",
 				"l gives",
+				"dy to m",
+				"and get",
+				" with y",
+				" lull g",
 				"this lul",
+				"t ready ",
 				"s and ge",
+				"igned co",
 				" ready t",
 				" get rea",
 				" - this "
