--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,21 +6,21 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571695121340,
+	"last_scraped": 1571695981870,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"scrape_ct": 20,
-	"next_scrape": 1571695181340,
+	"scrape_ct": 7,
+	"next_scrape": 1571696041870,
 	"category": "dice_roller",
-	"last_update": 1571695121340,
+	"last_update": 1571695981870,
 	"output": [
 		{
 			"args": {},
-			"calls": 7203,
+			"calls": 71723,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"042 6",
@@ -66,5 +66,7 @@
 				" lanes.\\n"
 			]
 		}
-	]
+	],
+	"updt": 1571695617558,
+	"edit": 3
 }
