--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_etjdee.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_etjdee.db",
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571695981870,
+	"last_scraped": 1571696564443,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"scrape_ct": 7,
-	"next_scrape": 1571696041870,
+	"next_scrape": 1571739127303,
 	"category": "dice_roller",
-	"last_update": 1571695981870,
+	"last_update": 1571696564443,
 	"output": [
 		{
 			"args": {},
-			"calls": 71723,
+			"calls": 120599,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"042 6",
@@ -67,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1571695617558,
-	"edit": 3
+	"updt": 1571696293269,
+	"edit": 5
 }
