--- a/unknown_is8v0v.unic.json
+++ b/unknown_is8v0v.unic.json
@@ -1,22 +1,22 @@
 {
 	"_id": "unknown_is8v0v.unic",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_is8v0v.unic",
 	"sector": "HJG_3717",
 	"sec_level": 4,
 	"date_added": 1571695913135,
-	"last_scraped": 1571696062626,
+	"last_scraped": 1571696071660,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695913135
 		}
 	],
-	"scrape_ct": 14,
-	"next_scrape": 1571696122626,
+	"scrape_ct": 13,
+	"next_scrape": 1571696131660,
 	"category": "clicker",
-	"last_update": 1571696062626,
+	"last_update": 1571696071660,
 	"output": [
 		{
 			"args": {},
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 8758,
+			"calls": 13724,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"s lik",
@@ -132,5 +132,7 @@
 		{
 			"CLICK": true
 		}
-	]
+	],
+	"updt": 1571696068521,
+	"edit": 1
 }
