--- a/unknown_v19ae6.public.json
+++ b/unknown_v19ae6.public.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_v19ae6.public",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_v19ae6.public",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571524991550,
-	"last_scraped": 1571692782791,
+	"last_scraped": 1571697239137,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524991550
 		}
 	],
-	"updt": 1571689299694,
-	"edit": 41,
-	"next_scrape": 1571739174363,
+	"updt": 1571692911869,
+	"edit": 42,
+	"next_scrape": 1571741142921,
 	"category": "dice_roller",
-	"last_update": 1571692782791,
+	"last_update": 1571697239137,
 	"output": [
 		{
 			"args": {},
-			"calls": 325975,
+			"calls": 335240,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ow? E",
