--- a/unknown_vl44gu.init.json
+++ b/unknown_vl44gu.init.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_vl44gu.init",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_vl44gu.init",
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1565331352350,
-	"last_scraped": 1571692981416,
+	"last_scraped": 1571697520424,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,15 +22,15 @@
 		]
 	],
 	"pl_output": "\n`B> Initiating Virtual Environment Container...`\n`c----------------------------------------------------------------`\n\n`bPROJECT BLACKFOX(c) 2055 Capital Acquisition Technologies, Inc.`\n`bDate 05/17/55 14:32:21 Ver 00.01.00`\n\n`B> Preparing BLACKFOX Environment...` `lOK`\n`B> Peforming VEC Security Self-Test...` `eFAILED`\n\n`B>` `eUSER IS NOT AUTHORISED.` `zLOCK_ERROR`\n`B>` `eSYSTEM WILL NOW HALT.`\n",
-	"next_scrape": 1571735812725,
-	"updt": 1571689525063,
-	"edit": 1513,
+	"next_scrape": 1571738546833,
+	"updt": 1571693363070,
+	"edit": 1514,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1571692981416,
+	"last_update": 1571697520424,
 	"output": [
 		{
 			"args": {},
-			"calls": 2870777,
+			"calls": 2949175,
 			"base": "\n`B> Initiating Virtual Environment Container...`\n`c----------------------------------------------------------------`\n\n`bPROJECT BLACKFOX(c) 2055 Capital Acquisition Technologies, Inc.`\n`bDate 05/17/55 14:32:21 Ver 00.01.00`\n\n`B> Preparing BLACKFOX Environment...` `lOK`\n`B> Peforming VEC Security Self-Test...` `eFAILED`\n\n`B>` `eUSER IS NOT AUTHORISED.` `zLOCK_ERROR`\n`B>` `eSYSTEM WILL NOW HALT.`\n",
 			"fragments": [
 				"t eve",
