--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571698093138,
+	"last_scraped": 1571701379626,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571694487581,
-	"edit": 47,
-	"next_scrape": 1571739264149,
+	"updt": 1571698098736,
+	"edit": 48,
+	"next_scrape": 1571740990279,
 	"category": "plant_sim",
-	"last_update": 1571698093138,
+	"last_update": 1571701379626,
 	"output": [
 		{
 			"args": {},
@@ -59,35 +59,37 @@
 		},
 		{
 			"args": {},
-			"calls": 20312,
+			"calls": 21326,
 			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
 				"ve - ",
-				"corps",
 				"assig",
 				"ull gi",
 				"ssigne",
 				"rps an",
-				"our as",
 				"h your",
 				"e - th",
 				"d corp",
 				"ady to",
 				" to mo",
-				"ur assi",
 				"ps and ",
 				"ll give",
 				"l gives",
 				"dy to m",
 				"and get",
 				" with y",
+				" this l",
+				" move -",
 				" lull g",
 				"this lul",
 				"t ready ",
 				"s and ge",
+				"our assi",
 				"igned co",
+				"gned cor",
 				" ready t",
 				" get rea",
+				" corps a",
 				" - this "
 			]
 		}
