--- a/uknown_fqdxpv.bot_scam_do_not_run.json
+++ b/uknown_fqdxpv.bot_scam_do_not_run.json
@@ -6,18 +6,18 @@
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1571529701042,
-	"last_scraped": 1571700983171,
+	"last_scraped": 1571704291699,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529701042
 		}
 	],
-	"updt": 1571698098736,
-	"edit": 46,
-	"next_scrape": 1571746967515,
+	"updt": 1571701031554,
+	"edit": 47,
+	"next_scrape": 1571750380756,
 	"category": "plant_sim",
-	"last_update": 1571700983171,
+	"last_update": 1571704291699,
 	"output": [
 		{
 			"args": {},
@@ -125,6 +125,20 @@
 						"nctio"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 772,
+			"base": "c:\"2t522t\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
+			"fragments": [
+				"nctio",
+				"f you",
+				" your",
+				"e got ",
+				"tors? If",
+				"sistance",
+				"nce of s"
 			]
 		}
 	],
