--- a/uknown_t58dw4.bot_scam_do_not_run.json
+++ b/uknown_t58dw4.bot_scam_do_not_run.json
@@ -6,18 +6,18 @@
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571701326913,
+	"last_scraped": 1571704374613,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571698098736,
-	"edit": 48,
-	"next_scrape": 1571744140559,
+	"updt": 1571701482503,
+	"edit": 49,
+	"next_scrape": 1571750593665,
 	"category": "plant_sim",
-	"last_update": 1571701326913,
+	"last_update": 1571704374613,
 	"output": [
 		{
 			"args": {},
@@ -41,6 +41,18 @@
 						"one?\\n1E4"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 880,
+			"base": "c:\"9wm362\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"on, Mal",
+				". I hav",
+				"question",
+				"I have\\n",
+				"one?\\n1E4"
 			]
 		}
 	],
