--- a/uknown_tuh6rk.t2_scrape.json
+++ b/uknown_tuh6rk.t2_scrape.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571701358023,
+	"last_scraped": 1571704402871,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571698098736,
-	"edit": 45,
-	"next_scrape": 1571742042194,
+	"updt": 1571701482503,
+	"edit": 46,
+	"next_scrape": 1571749705800,
 	"category": "plant_sim",
-	"last_update": 1571701358023,
+	"last_update": 1571704402871,
 	"output": [
 		{
 			"args": {},
@@ -51,6 +51,23 @@
 						"ComCODE "
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 1179,
+			"base": "c:\"3dc8rg\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
+			"fragments": [
+				" I wo",
+				"you to",
+				" we un",
+				"way the",
+				"ies jus",
+				" word w",
+				"would en",
+				"we don't",
+				"r but ap",
+				"ComCODE "
 			]
 		}
 	],
