--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571701379626,
+	"last_scraped": 1571704415003,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571698098736,
-	"edit": 48,
-	"next_scrape": 1571740990279,
+	"updt": 1571701482503,
+	"edit": 49,
+	"next_scrape": 1571750450384,
 	"category": "plant_sim",
-	"last_update": 1571701379626,
+	"last_update": 1571704415003,
 	"output": [
 		{
 			"args": {},
@@ -91,6 +91,25 @@
 				" get rea",
 				" corps a",
 				" - this "
+			]
+		},
+		{
+			"args": {},
+			"calls": 728,
+			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"s and",
+				"is lu",
+				"et re",
+				" lull",
+				"eady t",
+				"ady to",
+				"t ready",
+				" this l",
+				" move -",
+				"our assi",
+				"gned cor",
+				" corps a"
 			]
 		}
 	],
