--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571707483831,
+	"last_scraped": 1571710287322,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571704643385,
-	"edit": 50,
-	"next_scrape": 1571747494098,
+	"updt": 1571707805627,
+	"edit": 51,
+	"next_scrape": 1571749938373,
 	"category": "plant_sim",
-	"last_update": 1571707483831,
+	"last_update": 1571710287322,
 	"output": [
 		{
 			"args": {},
@@ -95,20 +95,24 @@
 		},
 		{
 			"args": {},
-			"calls": 1272,
+			"calls": 2012,
 			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
-				"s and",
+				"your ",
 				"is lu",
 				"et re",
 				" lull",
 				"eady t",
 				"ady to",
 				"t ready",
+				"ith you",
 				" this l",
 				" move -",
+				"s and ge",
 				"our assi",
 				"gned cor",
+				"and get ",
+				" to move",
 				" corps a"
 			]
 		}
