--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571713200642,
+	"last_scraped": 1571715762967,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571710512451,
-	"edit": 52,
-	"next_scrape": 1571754666301,
+	"updt": 1571713443932,
+	"edit": 53,
+	"next_scrape": 1571758458687,
 	"category": "plant_sim",
-	"last_update": 1571713200642,
+	"last_update": 1571715762967,
 	"output": [
 		{
 			"args": {},
@@ -95,22 +95,24 @@
 		},
 		{
 			"args": {},
-			"calls": 2674,
+			"calls": 3374,
 			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
 				"your ",
 				"is lu",
-				"et re",
-				" lull",
-				"eady t",
-				"ady to",
+				"lull g",
+				"e - th",
 				"t ready",
+				"s lull ",
 				"ith you",
 				" this l",
 				" move -",
+				"ur assig",
 				"s and ge",
 				"our assi",
 				"gned cor",
+				"get read",
+				"eady to ",
 				"and get ",
 				" to move",
 				" corps a"
