--- a/derelict_clrnxi.donate.json
+++ b/derelict_clrnxi.donate.json
@@ -1,7 +1,7 @@
 {
 	"_id": "derelict_clrnxi.donate",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "derelict_clrnxi.donate",
 	"sector": "SPC_4267",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565382488474
+		},
+		{
+			"type": "died",
+			"when": 1571717892706
 		}
 	],
 	"next_scrape": 1571182336441,
@@ -96,6 +100,6 @@
 			]
 		}
 	],
-	"updt": 1571136876759,
-	"edit": 153
+	"updt": 1571141614294,
+	"edit": 154
 }
