--- a/derelict_clrnxi.db.json
+++ b/derelict_clrnxi.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "derelict_clrnxi.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "derelict_clrnxi.db",
 	"sector": "HJG_8314",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1571717952642
 		}
 	],
-	"updt": 1571062675690,
-	"edit": 180,
+	"updt": 1571068316629,
+	"edit": 181,
 	"next_scrape": 1571113693969,
 	"category": "dice_roller",
 	"last_update": 1571068197163,
