--- a/derelict_clrnxi.sys_expose_upgrades.json
+++ b/derelict_clrnxi.sys_expose_upgrades.json
@@ -1,7 +1,7 @@
 {
 	"_id": "derelict_clrnxi.sys_expose_upgrades",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "derelict_clrnxi.sys_expose_upgrades",
 	"sector": "HJG_8589",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1571715944032
+		},
+		{
+			"type": "died",
+			"when": 1571718055332
 		}
 	],
 	"retry_args": [
@@ -40,6 +44,25 @@
 				"rted app",
 				"ing to u",
 				"ifferent"
+			],
+			"hits": [
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"s whi",
+						"t idea",
+						"s stil",
+						"hile h",
+						"tarted ",
+						"f histo",
+						"approac",
+						"torians ",
+						"ted the ",
+						"rted app",
+						"ing to u",
+						"ifferent"
+					]
+				}
 			]
 		},
 		{
@@ -54,6 +77,46 @@
 				"they don't look so good"
 			],
 			"fragments": [
+				"s whi",
+				"t idea",
+				"s stil",
+				"hile h",
+				"tarted ",
+				"f histo",
+				"approac",
+				"torians ",
+				"ted the ",
+				"rted app",
+				"ing to u",
+				"ifferent"
+			],
+			"hits": [
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"s whi",
+						"t idea",
+						"s stil",
+						"hile h",
+						"tarted ",
+						"f histo",
+						"approac",
+						"torians ",
+						"ted the ",
+						"rted app",
+						"ing to u",
+						"ifferent"
+					]
+				}
+			]
+		}
+	],
+	"updt": 1571716800024,
+	"edit": 1,
+	"identified": [
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
 				"s whi",
 				"t idea",
 				"s stil",
