--- a/uknown_ilsh9q.public.json
+++ b/uknown_ilsh9q.public.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_ilsh9q.public",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ilsh9q.public",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527118659,
-	"last_scraped": 1571715772709,
+	"last_scraped": 1571718716998,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527118659
 		}
 	],
-	"updt": 1571713443932,
-	"edit": 51,
-	"next_scrape": 1571761783375,
+	"updt": 1571716800024,
+	"edit": 52,
+	"next_scrape": 1571762660681,
 	"category": "plant_sim",
-	"last_update": 1571715772709,
+	"last_update": 1571718716998,
 	"output": [
 		{
 			"args": {},
@@ -254,7 +254,7 @@
 		},
 		{
 			"args": {},
-			"calls": 3786,
+			"calls": 5069,
 			"base": "c:\"37x34q\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"case,",
