--- a/unknown_cr8xej.t1_db.json
+++ b/unknown_cr8xej.t1_db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_cr8xej.t1_db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_cr8xej.t1_db",
 	"sector": "K_2655",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565258632124
+		},
+		{
+			"type": "died",
+			"when": 1571721111652
 		}
 	],
 	"scrape_ct": 10,
@@ -77,8 +81,8 @@
 			]
 		}
 	],
-	"updt": 1571121542333,
-	"edit": 104,
+	"updt": 1571126504280,
+	"edit": 105,
 	"identified": [
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
