--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 1571718666462,
+	"last_scraped": 1571721640190,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
 		}
 	],
-	"updt": 1571716800024,
-	"edit": 54,
-	"next_scrape": 1571760209293,
+	"updt": 1571718832807,
+	"edit": 55,
+	"next_scrape": 1571762072125,
 	"category": "plant_sim",
-	"last_update": 1571718666462,
+	"last_update": 1571721640190,
 	"output": [
 		{
 			"args": {},
@@ -95,26 +95,31 @@
 		},
 		{
 			"args": {},
-			"calls": 4170,
+			"calls": 5490,
 			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
 				"your ",
-				"is lu",
-				"lull g",
-				"e - th",
+				" with",
+				"h your",
 				"t ready",
-				"s lull ",
 				"ith you",
+				"e - thi",
 				" this l",
 				" move -",
+				" get re",
 				"ur assig",
+				"signed c",
+				"s lull g",
 				"s and ge",
+				"ready to",
 				"our assi",
+				"his lull",
 				"gned cor",
 				"get read",
 				"eady to ",
 				"and get ",
 				" to move",
+				" lull gi",
 				" corps a"
 			]
 		}
