--- a/unknown_nd836z.calm.json
+++ b/unknown_nd836z.calm.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_nd836z.calm",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_nd836z.calm",
 	"sector": "VNP_6280",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565035197956
+		},
+		{
+			"type": "died",
+			"when": 1571724821390
 		}
 	],
 	"scrape_ct": 17,
@@ -105,8 +109,8 @@
 			]
 		}
 	],
-	"updt": 1568767857595,
-	"edit": 12,
+	"updt": 1570602128402,
+	"edit": 13,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
