--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_nd836z.logviewer",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "dead",
 	"script": "unknown_nd836z.logviewer",
 	"sector": "NGC_8726",
 	"sec_level": 4,
@@ -15,10 +15,14 @@
 		{
 			"type": "died",
 			"when": 1571724571730
+		},
+		{
+			"type": "died",
+			"when": 1571724821390
 		}
 	],
-	"updt": 1571721764380,
-	"edit": 56,
+	"updt": 1571724691273,
+	"edit": 57,
 	"next_scrape": 1571808672355,
 	"category": "plant_sim",
 	"last_update": 1571721640190,
