--- a/uknown_fqdxpv.bot_scam_do_not_run.json
+++ b/uknown_fqdxpv.bot_scam_do_not_run.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_fqdxpv.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_fqdxpv.bot_scam_do_not_run",
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1571529701042,
-	"last_scraped": 1571727443339,
+	"last_scraped": 1571730177669,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529701042
 		}
 	],
-	"updt": 1571724466775,
-	"edit": 55,
-	"next_scrape": 1571769975584,
+	"updt": 1571729326779,
+	"edit": 56,
+	"next_scrape": 1571776422285,
 	"category": "plant_sim",
-	"last_update": 1571727443339,
+	"last_update": 1571730177669,
 	"output": [
 		{
 			"args": {},
@@ -129,7 +129,7 @@
 		},
 		{
 			"args": {},
-			"calls": 7448,
+			"calls": 8860,
 			"base": "c:\"2t522t\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
 				"nctio",
