--- a/uknown_gyuk8v.bot_scam_do_not_run.json
+++ b/uknown_gyuk8v.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_gyuk8v.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_gyuk8v.bot_scam_do_not_run",
 	"sector": "HJG_8589",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1571716736883
+		},
+		{
+			"type": "died",
+			"when": 1571740446384
 		}
 	],
 	"scrape_ct": 15,
@@ -126,6 +130,6 @@
 			]
 		}
 	],
-	"updt": 1571716800024,
-	"edit": 1
+	"updt": 1571717026441,
+	"edit": 2
 }
