--- a/unknown_ywicgz.bot_brain.json
+++ b/unknown_ywicgz.bot_brain.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ywicgz.bot_brain",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_ywicgz.bot_brain",
 	"sector": "K_2655",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565132603473
+		},
+		{
+			"type": "died",
+			"when": 1571744780960
 		}
 	],
 	"next_scrape": 1570955381178,
@@ -108,6 +112,6 @@
 			]
 		}
 	],
-	"updt": 1570909124597,
-	"edit": 130
+	"updt": 1570909349919,
+	"edit": 131
 }
