--- a/uknown_wvp0h8.bot_scam_do_not_run.json
+++ b/uknown_wvp0h8.bot_scam_do_not_run.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_wvp0h8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_wvp0h8.bot_scam_do_not_run",
 	"sector": "SPC_2020",
 	"sec_level": 4,
 	"date_added": 1571531077580,
-	"last_scraped": 1571751237662,
+	"last_scraped": 1571753833576,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531077580
 		}
 	],
-	"updt": 1571749164941,
-	"edit": 63,
-	"next_scrape": 1571797233051,
+	"updt": 1571751420612,
+	"edit": 64,
+	"next_scrape": 1571793727148,
 	"category": "coin_flipper",
-	"last_update": 1571751237662,
+	"last_update": 1571753833576,
 	"output": [
 		{
 			"args": {},
-			"calls": 551431,
+			"calls": 560729,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e, Ma",
