--- a/unknown_0jkcl8.db.json
+++ b/unknown_0jkcl8.db.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_0jkcl8.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_0jkcl8.db",
 	"sector": "VNP_3268",
 	"sec_level": 4,
 	"date_added": 1571754786387,
-	"last_scraped": 1571755449701,
+	"last_scraped": 1571755800906,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571754786387
 		}
 	],
-	"scrape_ct": 7,
-	"next_scrape": 1571755509701,
+	"next_scrape": 1571801773765,
 	"category": "dice_roller",
-	"last_update": 1571755449701,
+	"last_update": 1571755800906,
 	"output": [
 		{
 			"args": {},
-			"calls": 73604,
+			"calls": 116960,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"predi",
@@ -58,8 +57,8 @@
 			]
 		}
 	],
-	"updt": 1571755251533,
-	"edit": 3,
+	"updt": 1571755477326,
+	"edit": 4,
 	"identified": [
 		{
 			"document": "NOT FOUND",
