--- a/unknown_ythy5v.lib_db.json
+++ b/unknown_ythy5v.lib_db.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_ythy5v.lib_db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ythy5v.lib_db",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531309105,
-	"last_scraped": 1571762030509,
+	"last_scraped": 1571764604852,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531309105
 		}
 	],
-	"updt": 1571759756193,
-	"edit": 67,
-	"next_scrape": 1571802038491,
+	"updt": 1571762238830,
+	"edit": 68,
+	"next_scrape": 1571806504647,
 	"category": "coin_flipper",
-	"last_update": 1571762030509,
+	"last_update": 1571764604852,
 	"output": [
 		{
 			"args": {},
-			"calls": 546798,
+			"calls": 556223,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"nt. i",
